@@ -40,6 +40,18 @@ FilteredAudioOutput::SupportsPause() const noexcept
 	return output->SupportsPause();
 }
 
+const std::map<std::string, std::string>
+FilteredAudioOutput::GetAttributes() const noexcept
+{
+	return output->GetAttributes();
+}
+
+void
+FilteredAudioOutput::SetAttribute(std::string &&_name, std::string &&_value)
+{
+	output->SetAttribute(std::move(_name), std::move(_value));
+}
+
 void
 FilteredAudioOutput::Enable()
 {
